--- a/newspaper/newstyle.css
+++ b/newspaper/newstyle.css
@@ -6,3 +6,29 @@ body {
 hr {
     color: #393939;
 }
+
+header {
+    display: flex;
+    justify-content: center;
+    flex-direction: column
+}
+header img {
+    width: 60%;
+    margin: 30px auto -10px;
+    rotate: -5deg;
+}
+header h3 {
+    text-align: center;
+    font-size: 2em;
+}
+
+footer {
+    text-align: center;
+    border: dashed #d1d1d1;
+    background-color: black;
+    padding: 20px;
+}
+footer a {
+    font-size: 2em;
+    color: #d1d1d1;
+}
