--- a/newspaper/newstyle.css
+++ b/newspaper/newstyle.css
@@ -30,15 +30,17 @@ main {
 }
 #main-left {
     border: solid;
-    width: 15%;
+    /* width: 15%; */
     margin: 0 10px;
+    flex-grow: 2;
 }
 
 #main-center {
     border: solid;
-    width: 70%;
+    /* width: 70%; */
     margin: 0 10px;
     padding: 5px;
+    flex-grow: 3;
 }
 #main-center h3 {
     text-align: center;
@@ -46,8 +48,9 @@ main {
 
 #main-right {
     border: solid;
-    width: 15%;
+    /* width: 15%; */
     margin: 0 10px;
+    flex-grow: 2;
 }
 /* everyting to do with the main contatiner and its contents */
 
